infrastructure/flux/notification-receiver/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-receiver
  namespace: flux-system
spec:
  type: LoadBalancer
  selector:
    app: notification-controller
  ports:
    - name: http
      port: 9292
      protocol: TCP
      targetPort: 9292
